--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,9 @@ Package: tibblify
 Title: Rectangle Nested Lists
 Version: 0.3.1.9000
 Authors@R: c(
-    person("Maximilian", "Girlich", , "maximilian.girlich@outlook.com", role = c("aut", "cre", "cph")),
+    person("Jon", "Harmon", , "jonthegeek@gmail.com", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0003-4781-4346")),
+    person("Maximilian", "Girlich", , "maximilian.girlich@outlook.com", role = c("aut", "cph")),
     person("Kirill", "Müller", role = "ctb")
   )
 Description: A tool to rectangle a nested list, that is to convert it into
@@ -15,29 +17,29 @@ License: GPL-3
 URL: https://github.com/mgirlich/tibblify,
     https://mgirlich.github.io/tibblify/
 BugReports: https://github.com/mgirlich/tibblify/issues
-Depends: 
-    R (>= 3.6.0)
-Imports: 
+Depends:
+    R (>= 4.1.0)
+Imports:
     cli (>= 3.6.2),
-    lifecycle (>= 1.0.4),
     purrr (>= 1.0.2),
     rlang (>= 1.1.3),
     tibble (>= 3.2.1),
     tidyselect (>= 1.2.0),
     vctrs (>= 0.6.5),
     withr (>= 2.5.2)
-Suggests: 
+Suggests:
     covr (>= 3.6.1),
     jsonlite (>= 1.8.0),
     knitr (>= 1.40),
+    lifecycle (>= 1.0.4),
     memoise (>= 2.0.1),
     rmarkdown (>= 2.16),
     spelling (>= 2.2),
     testthat (>= 3.1.4),
     yaml (>= 2.3.6)
-LinkingTo: 
+LinkingTo:
     vctrs (>= 0.6.5)
-VignetteBuilder: 
+VignetteBuilder:
     knitr
 Config/testthat/edition: 3
 Encoding: UTF-8
@@ -45,4 +47,4 @@ Language: en-US
 LazyData: true
 NeedsCompilation: yes
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.3
