--- a/.github/workflows/rlang-c.yaml
+++ b/.github/workflows/rlang-c.yaml
@@ -68,15 +68,13 @@ jobs:
           # 2. Create or Reopen
           if [ "$ISSUE_NUM" == "null" ]; then
             echo "Creating new issue..."
-            NEW_URL=$(gh issue create \
-              --title "$TITLE" \
+            # Capture the number directly using --json number --jq '.number'
             ISSUE_NUM=$(gh issue create \
               --title "$TITLE" \
               --body "The automated workflow detected changes in \`r-lib/rlang\`. This issue tracks the validation and integration of those changes.<br><br>Current Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}" \
               --json number --jq '.number')
             echo "Created issue #$ISSUE_NUM"
           else
-            if [ "$ISSUE_STATE" == "CLOSED" ]; then
             if [ "$ISSUE_STATE" == "CLOSED" ]; then
               echo "Reopening issue #$ISSUE_NUM"
               gh issue reopen "$ISSUE_NUM"
