--- a/.github/workflows/rlang-c.yaml
+++ b/.github/workflows/rlang-c.yaml
@@ -15,7 +15,6 @@ jobs:
   update-rlang:
     runs-on: ubuntu-latest
     env:
-      # R-lib actions often look for GITHUB_PAT; mapping the default token here is standard practice
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
@@ -68,11 +67,13 @@ jobs:
           # 2. Create or Reopen
           if [ "$ISSUE_NUM" == "null" ]; then
             echo "Creating new issue..."
-            # Capture the number directly using --json number --jq '.number'
-            ISSUE_NUM=$(gh issue create \
+            # Capture the URL output
+            NEW_URL=$(gh issue create \
               --title "$TITLE" \
-              --body "The automated workflow detected changes in \`r-lib/rlang\`. This issue tracks the validation and integration of those changes.<br><br>Current Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}" \
-              --json number --jq '.number')
+              --body "The automated workflow detected changes in \`r-lib/rlang\`. This issue tracks the validation and integration of those changes.<br><br>Current Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}")
+            
+            # Extract number from the URL (e.g., https://.../issues/123 -> 123)
+            ISSUE_NUM=$(echo "$NEW_URL" | grep -o '[0-9]*$')
             echo "Created issue #$ISSUE_NUM"
           else
             if [ "$ISSUE_STATE" == "CLOSED" ]; then
