--- a/.github/workflows/rlang-c.yaml
+++ b/.github/workflows/rlang-c.yaml
@@ -108,8 +108,7 @@ jobs:
         id: r_check
         uses: r-lib/actions/check-r-package@v2
         with:
-          working-directory: tibblify
-          error-on: "warning"
+          working-directory: "tibblify"
 
       - name: Report Failure
         if: failure() && steps.check_changes.outputs.changes_detected == 'true'
