Change license from GPL3 to MIT
I would like to relicence this package with the MIT license to make it easier to share code between tibblify and some related packages. @mgirlich informally agreed via email, but we need to make it official.

We need the approval of all copyright holders (everyone who has submitted code). @mgirlich, @hadley, @krlmlr: Will you allow us to relicense tibblify with the MIT license? If so, please reply "I agree" below.

- [ ] @mgirlich
- [ ] @hadley
- [ ] @krlmlr

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Description: A tool to rectangle a nested list, that is to convert it into
     parsing JSON files or the JSON response of REST APIs. It is supported
     by the 'vctrs' package and therefore offers a wide support of vector
     types.
-License: GPL-3
+License: MIT + file LICENSE
 URL: https://tibblify.wrangle.zone,
     https://github.com/wranglezone/tibblify
 BugReports: https://github.com/wranglezone/tibblify/issues
