Update documentation and file structure for specs
- Split `tib_*()` and `tspec_*()` into separate files.
- Prefix unexported functions with `.` for easier identification (partially complete, will continue as I work through other files).
- Prefix all `tib_*()` args with `.` for API consistently. Semi-breaking change (old args are `lifecycle::deprecated()`).
- Bring test coverage to 100% for
  - [x] tib_spec_basics.R
  - [x] tib_spec_class.R
  - [x] tib_spec_other.R
  - [x] tspec.R
- Standardize use of `is.null()` over `is_null()`.
- Replace `vctrs::vec_assert()` (currently "questioning" lifecycle) with `vctrs::obj_check_size()` + `vctrs::vec_check_size()`.
- Standardize names of `tib_*()` helpers.
- Add error classes for `nest_tree.R`.
- Replace `-` with `_` in filenames.
- Standardize function title capitalization.

- Closes #246.
- Closes #228.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,7 +48,6 @@ S3method(format_tib_f,tib_vector_numeric)
 S3method(print,tib_collector)
 S3method(print,tibblify_object)
 S3method(print,tspec)
-S3method(tib_native_ptype,default)
 export(camel_case_to_snake_case)
 export(get_spec)
 export(guess_tspec)
@@ -92,6 +91,30 @@ import(rlang)
 import(vctrs)
 importFrom(cli,cli_abort)
 importFrom(cli,qty)
+importFrom(glue,glue)
+importFrom(lifecycle,deprecated)
+importFrom(rlang,arg_match0)
+importFrom(rlang,as_function)
+importFrom(rlang,caller_arg)
+importFrom(rlang,caller_env)
+importFrom(rlang,check_dots_empty)
+importFrom(rlang,current_call)
+importFrom(rlang,current_env)
+importFrom(rlang,exec)
+importFrom(rlang,is_empty)
+importFrom(rlang,is_named)
+importFrom(rlang,is_true)
+importFrom(rlang,list2)
 importFrom(rlang,zap)
 importFrom(tibble,tibble)
+importFrom(vctrs,list_sizes)
+importFrom(vctrs,obj_check_vector)
+importFrom(vctrs,vec_any_missing)
+importFrom(vctrs,vec_cast)
+importFrom(vctrs,vec_check_size)
+importFrom(vctrs,vec_detect_missing)
+importFrom(vctrs,vec_init)
+importFrom(vctrs,vec_ptype)
+importFrom(vctrs,vec_size)
+importFrom(vctrs,vec_unique_loc)
 useDynLib(tibblify, .registration = TRUE)
