--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tibblify
 Title: Rectangle Nested Lists
-Version: 0.3.1.9000
+Version: 0.3.1.9001
 Authors@R: c(
     person("Jon", "Harmon", , "jonthegeek@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-4781-4346")),
@@ -21,24 +21,24 @@ Depends:
     R (>= 4.1.0)
 Imports:
     cli (>= 3.6.2),
+    glue,
+    lifecycle,
     purrr (>= 1.0.2),
-    rlang (>= 1.1.3),
+    rlang,
     tibble (>= 3.2.1),
     tidyselect (>= 1.2.0),
-    vctrs (>= 0.6.5.9000),
+    vctrs,
     withr (>= 2.5.2)
 Suggests:
     covr (>= 3.6.1),
     jsonlite (>= 1.8.0),
     knitr (>= 1.40),
-    lifecycle (>= 1.0.4),
     memoise (>= 2.0.1),
     rmarkdown (>= 2.16),
     spelling (>= 2.2),
     testthat (>= 3.1.4),
     yaml (>= 2.3.6)
 LinkingTo:
-    rlang,
     vctrs
 VignetteBuilder:
     knitr
