Document spec manipulation functions
For each of the two target files (and any files touched by these changes, and, for some things, files I've already "finished"), do the following:

- Dot-prefix internal functions defined in the file.
  - [x] `spec_combine.R`
  - [x] `unpack_tspec.R`
- Ensure 100% test coverage.
  - [x] `spec_combine.R`
  - [x] `unpack_tspec.R`
- Revise wording and details in documentation.
  - [x] `spec_combine.R`
  - [x] `unpack_tspec.R`
- Refactor/reorganize file for understandability/readability/maintainability.
  - [x] `spec_combine.R`
  - [x] `unpack_tspec.R`
- Briefly document unexported functions (makes it easier to determine where they're from + helps future me).
  - [x] `spec_combine.R`
  - [x] `unpack_tspec.R`
  - [x] `tib_spec_basics.R`
  - [x] `tib_spec_other.R`

I also began to minimize the `@import` and `@importFrom` directives to make it easier (to me) to find where various functions are defined. I'm also implementing input typing in the docs, and went back to previously documented files to update to that format.

- Closes #259

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,7 +88,6 @@ export(unpack_tspec)
 export(untibblify)
 export(zap)
 import(rlang)
-import(vctrs)
 importFrom(cli,cli_abort)
 importFrom(cli,qty)
 importFrom(glue,glue)
@@ -100,21 +99,13 @@ importFrom(rlang,caller_env)
 importFrom(rlang,check_dots_empty)
 importFrom(rlang,current_call)
 importFrom(rlang,current_env)
-importFrom(rlang,exec)
 importFrom(rlang,is_empty)
 importFrom(rlang,is_named)
 importFrom(rlang,is_true)
 importFrom(rlang,list2)
 importFrom(rlang,zap)
 importFrom(tibble,tibble)
-importFrom(vctrs,list_sizes)
-importFrom(vctrs,obj_check_vector)
-importFrom(vctrs,vec_any_missing)
+importFrom(vctrs,list_unchop)
 importFrom(vctrs,vec_cast)
-importFrom(vctrs,vec_check_size)
-importFrom(vctrs,vec_detect_missing)
-importFrom(vctrs,vec_init)
-importFrom(vctrs,vec_ptype)
-importFrom(vctrs,vec_size)
-importFrom(vctrs,vec_unique_loc)
+importFrom(vctrs,vec_is)
 useDynLib(tibblify, .registration = TRUE)
