--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,7 @@ Imports:
     glue,
     lifecycle,
     purrr (>= 1.0.2),
-    rlang,
+    rlang (>= 1.1.0),
     tibble (>= 3.2.1),
     tidyselect (>= 1.2.0),
     vctrs,
